--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
 .links{
     text-decoration: none;
 }
+.links:hover{
+    color: green;
+}
+.disable{
+    cursor: none;
+}
 #about{
     letter-spacing: 1.5px;
     word-spacing: 2px;
