--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html{
+    scroll-behavior: smooth;
+}
+#load1{
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+}
 #imgs{
     transform: translateY(-80px);
 }
@@ -107,7 +115,14 @@ h4{
 #lead{
     font-size: 20px;
 }
-@media screen and (max-width:800px){
+.loader_bg{
+    position: fixed;
+    z-index: 99999;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+}
+@media screen and (max-width:500px){
     #logo{
         position: relative;
         text-align: center;
@@ -117,5 +132,8 @@ h4{
     }
     #body{
         font-size: 12px;
+    }
+    #myProfile{
+        padding: 10px
     }
 }
