--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ html{
 #alert{
     position: absolute;
 }
+#icon{
+    color: red;
+}
+#thanks-text{
+    color: red;
+}
+#like{
+    background-color: white;
+    border: 2.5px solid red;
+    color: darkblue;
+}
 #profile{
     font-size: 60px;
 }
